--- a/client/index.html
+++ b/client/index.html
@@ -2,9 +2,17 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <!-- <link rel="icon" type="image/svg+xml" href="/vite.svg" /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>vite-project</title>
+    <title>Saving Throws</title>
+    <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap" rel="stylesheet">
+ <!-- Example using Lobster -->
+    <style>
+      .calligraphy {
+        font-family: 'Lobster', cursive; /* Apply the calligraphy-like font */
+      }
+    </style>
   </head>
   <body>
     <div id="root"></div>
